@@ -1,3 +1,10 @@
+2004-05-26 Braden McDaniel  <braden@endoframe.com>
+
+	Doc-comment fixes and improvements.
+
+	* src/libopenvrml/openvrml/basetypes.cpp
+	* src/libopenvrml/openvrml/node.cpp
+
 2004-05-16 Braden McDaniel  <braden@endoframe.com>
 
 	* mozilla-plugin/src/Makefile.am:  Fixed package name for
